removed filter word to prevent wrap on mobile

--- a/css/skin.css
+++ b/css/skin.css
@@ -2523,7 +2523,7 @@ h3.project-title{
 .grid-filter-menu li{
 	padding: 0;
 	text-transform: none;
-	font-size: 1.6rem;
+	font-size: 1.75rem;
 	font-weight: 600;
 	letter-spacing: 0;
 }
